Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20376

recovery-small test_170: can't put import into FULL state, have REPLAY_LOCKS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Alexander Boyko <c17825@cray.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/74f02da1-8ade-46d9-bd71-7288c099ff64

      test_170 failed with the following error:

      import is not in FULL state
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-reviews/126583 - 5.14.0-611.55.1.el9_7.x86_64
      servers: https://build.whamcloud.com/job/lustre-reviews/126583 - 5.14.0-611.55.1_lustre.el9.x86_64

      The test is a new one and was introduced with
      f0d3dbe8e1 LU-18154 ptlrpc: don't delay rq_no_delay after IDLE

      Looks it fails sometimes. Need more logs. The current log time frame is too late for rc.

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      recovery-small test_170 - import is not in FULL state

            aboyko Alexander Boyko
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: