LU-20376 ptlrpc: use rq_no_delay for final ping

recovery-small test_170 shows one more problem during recovery.
If reconnection happens during REPLAY_WAIT and final ping is
not sent, it stays inflight without ability to be sent after
reconnection, use rq_no_delay for it. The
ptlrpc_import_recovery_state_machine() will send it after
reconnection.

test_170 is improved with a limit waiting, and skipping fast
REPLAY_LOCK phase.

Test-Parameters: testlist=recovery-small env=ONLY=170,ONLY_REPEAT=50
Fixes: f0d3dbe8e1 ("LU-18154 ptlrpc: don't delay rq_no_delay after IDLE")
Signed-off-by: Alexander Boyko <alexander.boyko@hpe.com>
Change-Id: I069d6ade1307e06aeec6b6fe25d64ef0029727b2
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/66754
Reviewed-by: Alexander Zarochentsev <alexander.zarochentsev@hpe.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>