lustre/ptlrpc/import.c
@@ -1575,6 +1575,7 @@ static int signal_completed_replay(struct obd_import *imp)
 			     MSG_LOCK_REPLAY_DONE | MSG_REQ_REPLAY_DONE);
 	if (obd_at_off(imp->imp_obd))
 		req->rq_timeout *= 3;
+	req->rq_no_delay = 1;
 	req->rq_interpret_reply = completed_replay_interpret;
 
 	ptlrpcd_add_req(req);
